fixed bug scrollbar content

--- a/src/app/theme/admin-layout/admin-layout.component.scss
+++ b/src/app/theme/admin-layout/admin-layout.component.scss
@@ -1,6 +1,6 @@
 .mat-container {
   width: 100%;
-  height: 94%;
+  position: relative;
 }
 
 .main-content {
