--- a/src/app/theme/header/header.component.scss
+++ b/src/app/theme/header/header.component.scss
@@ -9,8 +9,11 @@
 }
 
 .mat-toolbar {
-  height: 6%;
+  height: 48px;
   box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
+  z-index: 200;
+  position: sticky;
+  top: 0;
 }
 
 .mat-toolbar-row, .mat-toolbar-single-row {
